--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,40 @@
 /*  your css code here. If applicable */
+*{
+	margin:0px;
+	padding:0px;
+}
+body{
+	display:flex;
+	align-items:center;
+	justify-content:center;
+	height:100vh;
+}
+#card-main{
+	display:flex;
+	align-items:center;
+	justify-content:center;
+	box-shadow:-2px 5px 15px 2px;
+	width:25%;
+	height:70%;
+	border-sixe:border-box;
+}
+
+#card-body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
+    height: 80%;
+}
+
+#card-img {
+    width: 100%;
+    height: 50%;
+}
+button{
+	border-radius:5px;
+	padding:5px;
+	background-color:orangered;
+	color:white;
+}
